Step 1: Test-fix: calculateRewards solves concurrency issues